# asio_async_server

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
CMake/: GetGitVersion.cmake  config_clang_debug.sh
src/: constants.h  main.cpp  main.h
src/client/: CMakeLists.txt  client.cpp
src/server/: AsyncServer.cpp  AsyncServer.h  CMakeLists.txt  PeriodicTask.cpp  PeriodicTask.h  serverEcho.cpp  utilities.cpp  utilities.h
